--- a/templates/account_app/login.html
+++ b/templates/account_app/login.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}
-    Register
+    Login
 {% endblock %}
 {% block content %}
     <h2>Register</h2>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 {% endblock %}
