--- a/templates/account_app/login.html
+++ b/templates/account_app/login.html
@@ -4,7 +4,7 @@
     Login
 {% endblock %}
 {% block content %}
-    <h2>Register</h2>
+    <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
