--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -4,6 +4,6 @@
     Dashboard
 {% endblock %}
 {% block content %}
-    <h2>Dashboard</h2>
+    <h2 class="bg-slate-100">Dashboard</h2>
 
 {% endblock %}
