--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
 {% block title %}
     Dashboard
 {% endblock %}
 {% block content %}
     <h2 class="bg-slate-100">Dashboard</h2>
+    {% for product in products %}
+        <h2>{{ product }}</h2>
+        <p>{{ product.price }}</p>
+    {% endfor %}
+
 
 {% endblock %}
