--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -3,11 +3,28 @@
     Dashboard
 {% endblock %}
 {% block content %}
-    <h2 class="bg-slate-100">Dashboard</h2>
     {% for product in products %}
-        <h2>{{ product }}</h2>
-        <p>{{ product.price }}</p>
+        <h2>{{ product.name }}</h2>
+        <p>Rs. {{ product.price }}</p>
+        <button onclick="add_to_cart()" value="{{ product.id }}">Add to
+            Cart
+        </button>
+        <h3 id="cart_status">0</h3>
     {% endfor %}
-
-
+    <script>
+        function add_to_cart() {
+            const product_id = event.target.value;
+            const res = fetch(`add-product/${product_id}`).then(
+                function (response) {
+                    response.json().then(
+                        function (res) {
+                            const data = res.quantity;
+                            console.log(data);
+                            document.getElementById("cart_status").innerText = data;
+                        }
+                    )
+                }
+            )
+        }
+    </script>
 {% endblock %}
