--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -9,7 +9,7 @@
         <button onclick="add_to_cart()" value="{{ product.id }}">Add to
             Cart
         </button>
-        <h3 id="cart_status">0</h3>
+        <h3 id="cart_status">{{ request.session.cart.total_quantity }}</h3>
     {% endfor %}
     <script>
         function add_to_cart() {
@@ -20,7 +20,7 @@
                         function (res) {
                             const data = res.quantity;
                             console.log(data);
-                            document.getElementById("cart_status").innerText = data;
+                            // document.getElementById("cart_status").innerText = data;
                         }
                     )
                 }
