--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}
     Dashboard
 {% endblock %}
@@ -9,11 +10,12 @@
         {% endif %}
     <div class="col-xs-12 my-1 col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-            {% comment %} <img src="..." class="card-img-top" alt="..."> {% endcomment %}
+            <img src="{{ product.image.url }}" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title"><a role="button">{{ product.name }}</a></h5>
+                <h5 class="card-title"><a role="button"
+                                          href="{% url 'main_app:product_detail' product.id %}">{{ product.name }}</a>
+                </h5>
                 <p class="card-text">Rs. {{ product.price }}</p>
-                <button onclick="add_to_cart()" value="{{ product.id }}" class='btn btn-primary'>Add to Cart</button>
             </div>
         </div>
     </div>
