remove trim method

--- a/templates/main_app/product_detail.html
+++ b/templates/main_app/product_detail.html
@@ -21,7 +21,7 @@
                     // select add_cart_btn via id
                     const add_cart_btn = document.getElementById('add_cart_btn');
                     // trim available stock to get only number
-                    const available_stock_number = parseInt(available_stock.innerText.trim().split(' ')[2]);
+                    const available_stock_number = parseInt(available_stock.innerText.split(' ')[2]);
                     // reduce available stock number by 1
                     const new_available_stock_number = available_stock_number - 1;
                     // set new available stock number
