--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% endblock %}
     <script src="{% static 'js/axios.min.js' %}"></script>
 </head>
-<body>
+<body id="body">
 <div class="container my-1">
     {% for message in messages %}
         {% if message.tags == 'error' %}
