--- a/templates/main_app/product_detail.html
+++ b/templates/main_app/product_detail.html
@@ -8,6 +8,19 @@
     <h3 id="available_stock">Available Stock: {{ product.quantity_available }}</h3>
     <button onclick="add_to_cart()" value="{{ product.id }}" id="add_cart_btn">Add To Cart</button>
     <script>
+        // javascript on load
+        window.onload = function () {
+            // select available stock via id
+            const available_stock = document.getElementById('available_stock');
+            // select add_cart_btn via id
+            const add_cart_btn = document.getElementById('add_cart_btn');
+            // trim available stock to get only number
+            const available_stock_number = parseInt(available_stock.innerText.split(' ')[2]);
+            // disable add to cart button if available stock is 0
+            if (available_stock_number === 0) {
+                add_cart_btn.disabled = true;
+            }
+        }
 
         function add_to_cart() {
             const product_id = event.target.value;
