--- a/templates/account_app/login.html
+++ b/templates/account_app/login.html
@@ -4,14 +4,48 @@
     Login
 {% endblock %}
 {% block css_style %}
-
     <style>
         #main_div {
-            background-image: url("{% static 'account_app/269811391_1310798559386993_4387993744777411237_n.jpg' %}");
+            text-align: center;
+            margin-top: 50px;
         }
 
-    </style>
+        h2 {
+            color: #333;
+        }
 
+        form {
+            max-width: 300px;
+            margin: 0 auto;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 {% endblock %}
 {% block content %}
     <div id="main_div">
