--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <title>{% block title %}{% endblock %} - Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    {#    <script src="https://cdn.tailwindcss.com"></script>#}
     {% block css_style %}
 
     {% endblock %}
@@ -27,10 +26,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'main_app:dashboard' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" aria-current="page"
+                               href="{% url 'main_app:dashboard' %}">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,14 +35,20 @@
                                 More Actions
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="{% url 'main_app:order_history' %}">Order History</a>
+                                {% if user.is_authenticated %}
+                                    <li>
+                                    <a class="dropdown-item" href="{% url 'main_app:order_history' %}">Order History</a>
+                                {% endif %}
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                {% if request.user.is_authenticated %}
+                                {% if user.is_authenticated %}
                                     <li><a class="dropdown-item" href="{% url 'account_app:logout' %}">Logout</a>
+                                    </li>
+                                {% else %}
+                                    <li><a class="dropdown-item" href="{% url 'account_app:login' %}">Login</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'account_app:register' %}">Register</a>
                                     </li>
                                 {% endif %}
                             </ul>
