--- a/templates/main_app/order_history.html
+++ b/templates/main_app/order_history.html
@@ -2,6 +2,9 @@
 {% block title %}
     Dashboard
 {% endblock %}
+{% block css_style %}
+
+{% endblock %}
 {% block content %}
     <table class="table">
         <thead>
@@ -20,6 +23,11 @@
                 <td>{{ order.get_order_total_price }}</td>
                 <td>
                     <ul class="list-group list-group-numbered">
+                    <form method="post" action="{% url 'main_app:review' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="order_id" value="{{ order.id }}">
+                        <input type="submit" value="Give Review" class="btn btn-primary">
+                    </form>
                         {% if order.get_order_status == 'Pending' %}
                             <div class="alert alert-warning" role="alert">
                                 Status: {{ order.get_order_status }}
