--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -6,13 +6,27 @@
 {% block content %}
     {#    two columns, one for search, another for product display which is thrice wider than search #}
     <div class="row">
-        <div class="col-1">
+        <div class="col-2">
             <form action="" method="get">
-                dynamic options for price range
-
+                <div class="form-group mt-1">
+                    <label>
+                        <input type="text" name="search_name" class="form-control" placeholder="Search by name">
+                    </label>
+                </div>
+                <div class="form-group mt-1">
+                    <label>
+                        <input type="number" name="search_price_min" class="form-control" placeholder="Min Price">
+                    </label>
+                </div>
+                <div class="form-group mt-1">
+                    <label>
+                        <input type="number" name="search_price_max" class="form-control" placeholder="Max Price">
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary mt-1">Search</button>
             </form>
         </div>
-        <div class="col-11">
+        <div class="col">
             {% for product in products %}
                 {% if forloop.counter0|divisibleby:3 %}
                     <div class="row my-3">
