--- a/templates/main_app/cart.html
+++ b/templates/main_app/cart.html
@@ -3,26 +3,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Product Name</th>
-        <th scope="col">Price</th>
-        <th scope="col">Quantity</th>
-        <th scope="col">Total</th>
-      </tr>
-    </thead>
-    <tbody>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Product Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Total</th>
+        </tr>
+        </thead>
+        <tbody>
         {% for item in individual_items %}
-      <tr>
-        <th>{{item.product_name}}</th>
-        <td>{{item.price}}</td>
-        <td>{{item.quantity}}x</td>
-        <td>Rs. {{item.total}}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+            <tr>
+                <th>{{ item.product_name }}</th>
+                <td>{{ item.price }}</td>
+                <td>{{ item.quantity }}x</td>
+                <td>Rs. {{ item.total }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-<h4>{{ cart_total_price }}</h4>
+    <h4>Cart Total: {{ cart_total_price }}</h4>
+{#    discount show#}
+    {% if discount %}
+        <h4>Discount: {{ discount }}</h4>
+    {% endif %}
+    <hr>
+    {% if cart_total_price > 0 %}
+        <a role="button" class="btn btn-success" href="{% url 'main_app:checkout' %}">Checkout</a>
+    {% endif %}
 {% endblock %}
