--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -23,6 +23,17 @@
                         <input type="number" name="search_price_max" class="form-control" placeholder="Max Price">
                     </label>
                 </div>
+
+                {#                search by category#}
+                <div class="form-group mt-1">
+                    <label>
+                        <select name="category" id="category" class="form-select">
+                            {% for category in categories %}
+                                <option value="{{ category.id }}">{{ category.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </label>
+                </div>
                 <button type="submit" class="btn btn-primary mt-1">Search</button>
             </form>
         </div>
