--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     {% endblock %}
     <script src="{% static 'js/axios.min.js' %}"></script>
+
 </head>
 <body id="body">
 <div class="container-fluid my-1">
@@ -42,8 +43,12 @@
                                 {% if user.is_authenticated %}
                                     <li>
                                     <a class="dropdown-item" href="{% url 'main_app:order_history' %}">Order History</a>
+                                    </li>
+                                    <li>
+                                    <a class="dropdown-item" href="{% url 'main_app:add_products' %}">Add Product</a>
+                                    </li>
                                 {% endif %}
-                                </li>
+
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
