--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,12 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'main_app:dashboard' %}">Amazon Central</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'main_app:contact_us' %}">Contact
+                            Us</a>
+                    </li>
+                </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,46 +32,49 @@
 
                 </button>
 
-            <div>
-                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                               href="{% url 'main_app:cart' %}">Cart</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                More Actions
-                            </a>
+                <div>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                   href="{% url 'main_app:cart' %}">Cart</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    More Actions
+                                </a>
 
-                             <ul class="dropdown-menu">
-                                {% if user.is_authenticated %}
+                                <ul class="dropdown-menu">
+                                    {% if user.is_authenticated %}
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'main_app:order_history' %}">Order
+                                                History</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'main_app:add_products' %}">Add
+                                                Product</a>
+                                        </li>
+                                    {% endif %}
+
                                     <li>
-                                    <a class="dropdown-item" href="{% url 'main_app:order_history' %}">Order History</a>
+                                        <hr class="dropdown-divider">
                                     </li>
-                                    <li>
-                                    <a class="dropdown-item" href="{% url 'main_app:add_products' %}">Add Product</a>
-                                    </li>
-                                {% endif %}
+                                    {% if user.is_authenticated %}
+                                        <li><a class="dropdown-item" href="{% url 'account_app:logout' %}">Logout</a>
+                                        </li>
+                                    {% else %}
+                                        <li><a class="dropdown-item" href="{% url 'account_app:login' %}">Login</a></li>
+                                        <li><a class="dropdown-item"
+                                               href="{% url 'account_app:register' %}">Register</a>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </li>
+                        </ul>
 
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                {% if user.is_authenticated %}
-                                    <li><a class="dropdown-item" href="{% url 'account_app:logout' %}">Logout</a>
-                                    </li>
-                                {% else %}
-                                    <li><a class="dropdown-item" href="{% url 'account_app:login' %}">Login</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_app:register' %}">Register</a>
-                                    </li>
-                                {% endif %}
-                            </ul>
-                        </li>
-                    </ul>
-
+                    </div>
                 </div>
-            </div>
 
             </div>
         </nav>
