--- a/templates/main_app/cart.html
+++ b/templates/main_app/cart.html
@@ -32,6 +32,13 @@
     <hr>
     {% if cart_total_price > 0 %}
         <a role="button" class="btn btn-danger" href="{% url 'main_app:clear-cart' %}">Clear Cart</a>
-        <a role="button" class="btn btn-success" href="{% url 'main_app:checkout' %}">Place Order</a>
+        <form method="get" action="{% url 'main_app:checkout' %}">
+{#        bootstrap address field#}
+            <div class="form-group">
+                <label for="address">Address</label>
+                <input type="text" class="form-control" id="address" name="address" placeholder="Enter Address" required>
+            </div>
+            <button type="submit" class="btn btn-primary my-1">Checkout</button>
+        </form>
     {% endif %}
 {% endblock %}
